# document-vectorizer

./: README.md  output.json  pyproject.toml
docs/: conf.py  index.rst  modules.rst  oldv.document_vectorizers.rst  oldv.interfaces.api.rst  oldv.interfaces.rst  oldv.interfaces.web_api.rst  oldv.rst
oldv/: __init__.py  app.py  core.py  models.py  settings.py  types.py
oldv/document_vectorizers/: all_minilm.py  base.py  count_vectorizer.py  factory.py  nomic_embed_text.py
oldv/interfaces/: cli.py
oldv/interfaces/api/: app.py
oldv/interfaces/web_api/: app.py  main.py
stubs/scipy/sparse/: __init__.pyi
stubs/sentence_transformers/: __init__.pyi
stubs/sklearn/feature_extraction/text/: __init__.pyi
tests/: conftest.py  test_app.py  test_core.py  test_init.py  test_integration_api.py  test_integration_cli.py  test_integration_module.py  test_integration_web_api.py
tests/document_vectorizers/: fixtures.py  test_all_minilm.py  test_count_vectorizer.py  test_factory.py  test_nomic_embed_text.py
