[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]


[project]
name = "oldv"
description = "oldv is a library for document vectorization."
authors = [
    {name = "osoken"},
]
dynamic = [
    "version", 
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: Japanese",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "oltl @ git+https://github.com/osoekawaitlab/ol-type-library",
    "numpy",
    "scikit-learn",
    "pydantic",
    "scipy",
    "sentence-transformers",
    "einops",
]

[project.urls]
Source = "https://github.com/osoekawaitlab/document-vectorizer"

[tool.setuptools]
packages=["oldv"]

[tool.setuptools.package-data]
oldv = ["py.typed"]

[project.optional-dependencies]
dev=[
    "black",
    "flake8",
    "pyproject-flake8",
    "pytest",
    "mypy",
    "tox",
    "isort",
    "pytest-mock",
    "pytest-cov",
    "freezegun",
    "types-python-dateutil",
    "factory_boy",
    "polyfactory",
]
prod=[
]

[project.scripts]
oldv = "oldv.interfaces.cli:main"

[tool.pytest.ini_options]
addopts = ["-sv", "--doctest-modules", "--cov=oldv", "--cov-report=xml", "--cov-report=term-missing"]
testpaths = ["tests", "oldv"]
filterwarnings = [
    "error",
    "ignore: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.",
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.flake8]
max-line-length = 120
extend-ignore = "E203,E701"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
mypy_path = "stubs/"

[tool.pydantic.mypy]
init_typed = true

[tool.isort]
profile = "black"

[tool.tox]
legacy_tox_ini = """
    [tox]
    skipsdist = true
    envlist = py310

    [testenv]
    setenv = 
        VIRTUALENV_PIP = 24.0
    deps =
        -e .[dev]
    commands = 
        black oldv tests
        isort oldv tests
        pytest
        pflake8 oldv/ tests/ stubs/
        mypy oldv --strict --show-traceback
        mypy tests --strict
"""